--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>GAME!!🕹️ - Bailey</title>
-  <link rel="icon" href="images/music.png">
+  <link rel="icon" href="music.png">
   <!-- Links our CSS code to our HTML code -->
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -45,17 +45,17 @@
 
   <!--Audio for loss-->
   <audio id="myAudio">
-    <source src="entertainment/try.mp3" type="audio/mp3">
+    <source src="try.mp3" type="audio/mp3">
   </audio>
 
   <!--Audio for win-->
   <audio id="myAudio1">
-    <source src="entertainment/win.mp3" type="audio/mp3">
+    <source src="win.mp3" type="audio/mp3">
   </audio>
 
   <!--Audio for start-->
   <audio id="myAudio2">
-    <source src="entertainment/start.mp3" type="audio/mp3">
+    <source src="start.mp3" type="audio/mp3">
   </audio>
   
   <!-- Element that displays the score -->
